--- a/src/index.css
+++ b/src/index.css
@@ -46,18 +46,44 @@ form > Select, form > input {
 form > p {
     color: red;
 }
+/* ============================== */
+
 .catStack {
     display: flex;
     flex-direction: column;
     justify-self: flex-start;
 }
+
+/* ============================== */
 .dashboard {
     background-color: skyblue;
     position: relative;
     bottom: 0;
     width: 100%;
-    height: 140px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
 }
-/* .catStack {
-    min-height: 55vh;
-} */
+.dashboard > h1 {
+    align-self: center;
+    color: greenyellow;
+    font-size: 1.8em;
+    font-weight:bolder;
+    padding: 16px;
+}
+.panel {
+    display: flex;
+    justify-content: space-around;
+}
+.panel > * {
+    text-align: center;
+    color: white;
+}
+.bigNum {
+    font-size: 3em;
+    color: green;
+}
+.leader {
+    font-size: 1.4em;
+    color: green;
+}
